services-deployments/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: europe-west3-docker.pkg.dev/kpi-iate-course-picker/kpi-iate-course-picker-registry/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
      terminationGracePeriodSeconds: 30
