services-deployments/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        affinity-inject: any
    spec:
      containers:
      - name: frontend
        image: europe-west3-docker.pkg.dev/kpi-iate-course-picker/kpi-iate-course-picker-registry/frontend:latest  # image field is required
        args:
          - ng
          - serve
          - --host
          - 0.0.0.0
          - --disable-host-check
          - --port
          - "8080"
          - --poll=2000
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
      terminationGracePeriodSeconds: 30
