services-deployments/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - name: "5000"
      port: 80
      targetPort: 5000
  selector:
    app: backend
