services-deployments/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: frontend
